--- a/Functional/pom.xml
+++ b/Functional/pom.xml
@@ -81,6 +81,12 @@
 			<version>2.6</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>4.2.2</version>
+		</dependency>
 
 
 	</dependencies>
@@ -137,7 +143,7 @@
 					<configuration>
 						<source>1.8</source>
 						<target>1.8</target>
-					</configuration> 
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
